--- a/api/package.json
+++ b/api/package.json
@@ -20,9 +20,9 @@
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.12",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
-    "nodemon": "^2.0.12"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
