--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=p nodemon -L",
-    "test": "cross-env NODE_ENV=test mocha -w ./tests/**/*.spec.js"
+    "start": "cross-env NODE_ENV=production nodemon -L",
+    "test": "cross-env NODE_ENV=test mocha -w ./tests/**/*.spec.js",
+    "dev": "cross-env NODE_ENV=p nodemon -L"
   },
   "author": "Henry",
   "license": "ISC",
